# Course_work_1

./: .env  .env_example  .gitignore  README.md  config.py  mypy.ini  pyproject.toml
src/: default_report.json  main.py  reports.py  services.py  utils.py  views.py
tests/: test_repots.py  test_services.py  test_utils.py  test_views.py
